[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subcell_hpa"
version = "0.0.1"
description = "Package for running the Subcell model with HPA data"
readme = "README.md"
authors = [
  {name = "Julie Han", email = "jhan@chanzuckerberg.com"}
]
maintainers = [
  {name = "Julie Han", email = "jhan@chanzuckerberg.com"}
]
classifiers = [

]
license = {text = "Not open source"}

dependencies = [
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "pytest", # testing
    "mypy",  # linting
    "ruff",  # linting
]
build = [
    "build",
    "twine"
]

[project.urls]

bugs = "https://github.com/j-x-han/subcell_hpa/issues"
changelog = "https://github.com/j-x-han/subcell_hpa/blob/master/changelog.md"
homepage = "https://github.com/j-x-han/subcell_hpa"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
subcell_hpa = "cli:main"

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
